Go Live and Maintenance

--- a/9. Go Live and Maintenance.md
+++ b/9. Go Live and Maintenance.md
@@ -2,8 +2,28 @@
 
 #### 9.1 Demonstrate ability to configure DNS
 
+- [Go live checklist](https://devdocs.magento.com/guides/v2.3/cloud/live/go-live-checklist.html)
+- [Launch steps](https://devdocs.magento.com/guides/v2.3/cloud/live/launch-steps.html)
+
+- Update your A and CNAME records for your domains and hostnames.
+- Wait for the TTL time to pass and restart your web browser.
+
+> After checking with your registrar about where to change your DNS settings, add a CNAME record for your website that points to the Fastly service: prod.magentocloud.map.fastly.net. If you use multiple hostnames for your site, you must add a CNAME record for each one.
+
 #### 9.2 Demonstrate ability to set up and configure Fastly
+
+[Fastly](https://devdocs.magento.com/guides/v2.3/cloud/cdn/cloud-fastly.html)
 
 #### 9.3 Demonstrate ability to upgrade to a new version
 
+###### Upgrade of Magento and ece-tools to newer versions
+`composer update magento/ece-tools`
+
 #### 9.4 Demonstrate ability to upsize
+
+Magento Commerce can scale from the smallest Pro12 cluster to the largest Pro120 cluster.
+- Pro12 offers a 12-CPU (4 x 3 nodes) and 48GB RAM (16 x 3 nodes)
+- Pro120 offers 120 CPU (40 x 3 nodes) up to 480GB RAM (160 x 3 nodes)
+
+Contact to account manager
+
