Demonstrate ability to upsize

--- a/9. Go Live and Maintenance.md
+++ b/9. Go Live and Maintenance.md
@@ -25,5 +25,9 @@ Magento Commerce can scale from the smallest Pro12 cluster to the largest Pro120
 - Pro12 offers a 12-CPU (4 x 3 nodes) and 48GB RAM (16 x 3 nodes)
 - Pro120 offers 120 CPU (40 x 3 nodes) up to 480GB RAM (160 x 3 nodes)
 
-Contact to account manager
+For permanent upsize - contact to account manager.
+
+For temp upzise - create support ticket or:
+> During expected periods of heavy site traffic you can reach out to your Technical Account Manager to request an increase in cluster size. 
+> Then when traffic re-stabilizes you can request a down-size in cluster size.
 
